# questions-database

./: .env.example  .gitignore  .mcp.json  CLEANUP_SUMMARY.md  DOCKER_QUICKSTART.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  readme.md
.claude/: CLAUDE.md  activate_mcp.sh
docs/: API_DESIGN.md  API_REFERENCE.md  DATABASE_DESIGN.md  DEVELOPER_QUICKSTART.md  DOCUMENTATION_CONSOLIDATION_PLAN.md  E2E_TEST_REPORT_PLAYWRIGHT_MCP.md  E2E_TEST_RESULTS.md  FINAL_IMPLEMENTATION_STATUS.md  FRONTEND_DESIGN.md  GRAPHRAG_DESIGN_SPEC.md  GRAPHRAG_IMPLEMENTATION_GUIDE.md  (+22 more)
pdf_question_extractor/: .coveragerc  .dockerignore  .env.example  .gitignore  API_SETUP.md  Dockerfile  README.md  app.py  config.py  docker-entrypoint.sh  manual_pdf_upload_test.py  playwright.config.py  pyproject.toml  pytest.ini  pytest_simple.ini  requirements.txt  run_e2e_tests.sh  run_tests.sh  test_api_endpoints.sh  test_setup.py
pdf_question_extractor/api/: routes.py
pdf_question_extractor/api/schemas/: __init__.py  requests.py  responses.py
pdf_question_extractor/database/: __init__.py  init_db.py  models.py  schema.sql  session.py  vector_operations.py
pdf_question_extractor/models/: graph_entities.py
pdf_question_extractor/services/: __init__.py  embedding_service.py  llm_service.py  ocr_service.py  pdf_processor.py  utils.py
pdf_question_extractor/static/: index.html
pdf_question_extractor/static/css/: style.css
pdf_question_extractor/static/js/: app.js
pdf_question_extractor/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_embedding_service.py  test_full_system.py  test_llm_service.py  test_ocr_service.py  test_pdf_processor_integration.py  test_websocket.py
pdf_question_extractor/tests/e2e/: test_critical_paths.py  test_user_workflows.py
pdf_question_extractor/tests/manual_tests/: README.md  test_ocr_direct.py  test_ocr_metadata.py  test_setup.py
(+3 files in other folders)
